--- a/cedit/cedit/cedit.vcxproj.filters
+++ b/cedit/cedit/cedit.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="editor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prompt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="editor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="prompt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
