Initial syntax highlighter

--- a/cedit/cedit/cedit.vcxproj.filters
+++ b/cedit/cedit/cedit.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="markdownPrinter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="editor.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="table.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="markdownPrinter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
