--- a/cedit/cedit/cedit.vcxproj
+++ b/cedit/cedit/cedit.vcxproj
@@ -142,11 +142,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="editor.cpp" />
+    <ClCompile Include="markdownPrinter.cpp" />
     <ClCompile Include="prompt.cpp" />
     <ClCompile Include="Table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="editor.h" />
+    <ClInclude Include="markdownPrinter.h" />
     <ClInclude Include="prompt.h" />
     <ClInclude Include="table.h" />
   </ItemGroup>
